[package]
name = "move-vm-backend-common"
version = "0.1.0"
authors = ["Eiger <hello@eiger.co>"]
edition = "2021"

repository = "https://github.com/eigerco/substrate-move"
description = "MoveVM backend common"

[dependencies]
anyhow = { version = "1.0", default-features = false }
bcs = { git = "https://github.com/eigerco/bcs.git", default-features = false, branch = "master" }
lazy_static = { version = "1.4", default-features = false, features = ["spin_no_std"] }
move-binary-format = { path = "../language/move-binary-format", default-features = false }
move-core-types = { path = "../language/move-core/types", default-features = false, features = ["address32"] }
move-stdlib = { path = "../language/move-stdlib", default-features = false, features = ["address32"] }
move-vm-test-utils = { path = "../language/move-vm/test-utils", default-features = false }
move-vm-types = { path = "../language/move-vm/types", default-features = false }
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_bytes = { version = "0.11", default-features = false, features = ["alloc"] }

[features]
default = ["std", "gas_schedule"]
gas_schedule = []
testing = []

std = [
    "anyhow/std",
]
